fix missing border in IE6/7 empty table cell (#1486083)

--- a/skins/default/iehacks.css
+++ b/skins/default/iehacks.css
@@ -140,6 +140,7 @@ input, textarea
 {
   width: inherit;
   *width: auto; /* IE6/7 conditional hack */
+  border-collapse: collapse;
 }
 
 #messageframe
